Fix layout bugs

--- a/app/assets/stylesheets/base/base.css.scss
+++ b/app/assets/stylesheets/base/base.css.scss
@@ -80,7 +80,6 @@ a.link-danger:hover {
 #wrap {
   min-height: 100%;
   height: auto !important;
-  padding-bottom: 30px
 }
 
 footer {
