--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -21,15 +21,8 @@ body {
  */
 
 .sidebar {
-  position: fixed;
-  height: 100%;
-  display: block;
   padding: 20px;
   background-color: #f5f5f5;
-
-  > div {
-    margin-bottom: 50px;
-  }
 }
 
 /* Sidebar navigation */
